
- New patches (read online help for more info):

- New packages, libs, modules:
    * asterisk 11.15.0
    * asterisk-chan-capi post-1.1.6 with asterisk11 adjustments by Mihai Moldovan
    * asterisk-chan-dongle 1.1-git (asterisk11 branch)
    * asterisk-chan-sccp 4.1.0RC1
    * asterisk-gui 2.1.0RC1
    * autossh 1.4d
    * avm-forwarding 0.0.1
    * axTLS wrapper 1.4.9
    * cntlm 0.93beta5
    * ISC dhcp 4.2.5-P1
    * E-MailRelay 1.9
    * iksemel 1.5-git
    * libavmacl2 (taken from AVM's 7490.06.01 open-source package)
    * libcap 2.24
    * libgsm-1.0.13
    * libnettle 2.7.1
    * libsrtp-1.4.4+20100615
    * libusb-compat 0.1.5
    * nzbget 14.1
    * php 5.5.21
    * PJProject 2.2.1
    * python-mechanize 0.2.5
    * serf 1.3.8
    * ScanButton 0.2.3.cvs20090713
    * speex 1.2rc1
    * spandsp 0.0.6pre21
    * squashfs-tools 3.4

- Updated tools and hooks:

- Updated patches:

- Updated packages and libs:
    * apache 2.4.10
    * apr 1.5.1
    * apr-util 1.5.4
    * bash 3.2.53
    * bind 9.8.4-P2
    * bip 0.8.9
    * bird 1.4.0
    * CCID 1.4.18
    * cifs-utils 6.4
    * curl 7.40.0
    * cyassl 3.3.0
    * davfs2 1.5.2
    * dbus 1.8.14
    * dnsmasq 2.72
    * dosfstools 3.0.26
    * dropbear 2015.67
    * e2fsprogs 1.42.12
    * expat 2.1.0
    * ffmpeg 1.2.11
    * freetype 2.5.5
    * gdb 7.8.2
    * git 2.3.0
    * gmp 6.0.0
    * gnu-make 4.1
    * gnutls 2.12.23
    * haproxy 1.5.11
    * haserl 0.9.33
    * hplip 3.14.6
    * htop 1.0.3
    * httpry 0.1.8
    * ImageMagick 6.9.0-4
    * inadyn-mt 02.24.43
    * iodine 0.7.0
    * jpeg 6b2
    * knock 0.7
    * lftp 4.6.1
    * libcapi avm-(7390|7270).05.50
    * libconfig 1.4.9
    * libevent 2.0.22
    * libffi 3.2.1
    * libFLAC 1.3.1
    * libgcrypt 1.5.3
    * libgd 2.1.1
    * libgpg-error 1.12
    * liblzo 2.08
    * libneon 0.30.1
    * libogg 1.3.2
    * libopus 1.1
    * libpng 1.2.52
    * litasn1 4.0
    * libusb1 1.0.19
    * libvorbis 1.3.4
    * libxml 2.9.2