@@ -1,0 +1,11 @@
+$(call PKG_INIT_BIN,0.0)
+
+$(PKG_UNPACKED)
+
+$(pkg):
+
+$(pkg)-precompiled:
+
+$(pkg)-clean:
+
+$(PKG_FINISH)
