@@ -1,0 +1,3 @@
+Copyright (C) 2014 P.Haemmerlein (http://www.yourfritz.de)
+
+See http://www.ip-phone-forum.de/showthread.php?t=276183 for usage details.
