@@ -33,6 +33,7 @@ Latest changes:
     * avm-forwarding 0.0.1
     * axTLS wrapper 1.4.9
     * cntlm 0.93beta5
+    * decrypt FRITZ!OS configs
     * ISC dhcp 4.2.5-P1
     * E-MailRelay 1.9
     * iksemel 1.5-git
